# ui-openvpn-linux

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  INSTALL.md  LICENSE  README.md  SETUP.md  install-clean.sh  install.sh  tauri.conf.json  ui-openvpn-linux.desktop  uninstall.sh
.github/workflows/: rust-ci.yml
assets/: logo.txt
src/: desktop_app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/application/: dtos.rs  mappers.rs  mod.rs  services.rs
src/domain/: entities.rs  repositories.rs  use_cases.rs
src/infrastructure/: mod.rs  repositories.rs  services.rs
src/ui/: cli.rs  components.rs  controllers.rs  gtk.rs  mod.rs  simple.rs  web.rs
tests/: application_tests.rs  domain_tests.rs  infrastructure_tests.rs
vpn_configs/: .gitkeep  example-vpn.ovpn
