[package]
name = "ui-openvpn-linux"
version = "0.2.0"
edition = "2021"
authors = ["Davidmctf <davidmctf@gmail.com>"]
description = "🚀 Modern Rust CLI/GUI for OpenVPN management with Clean Architecture"
license = "MIT"
repository = "https://github.com/Davidmctf/ui-openvpn-linux"
keywords = ["vpn", "openvpn", "cli", "gui", "rust"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Core async runtime for non-blocking operations
tokio = { version = "1.0", features = ["full"] }
# Error handling with custom error types
thiserror = "1.0"
# Serialization for configuration files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async trait support
async-trait = "0.1"
# Command line argument parsing
clap = { version = "4.0", features = ["derive"], optional = true }

# Optional GTK4 UI (when feature enabled)
[dependencies.gtk4]
version = "0.9"
optional = true

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
# Temporary directory for tests
tempfile = "3.0"

[features]
default = ["cli"]
cli = ["clap"]
gui = ["gtk4"]

[profile.release]
# Optimized production builds
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "ui-openvpn"
path = "src/main.rs"