[package]
name = "openvpn-manager"
version = "0.1.0"
edition = "2021"
authors = ["Davidmctf <davidmctf@gmail.com>"]
description = "Simple OpenVPN manager for Linux using NetworkManager integration"
license = "MIT"
keywords = ["vpn", "openvpn", "networkmanager", "linux", "gui"]

[dependencies]
# Command line parsing
clap = { version = "4.0", features = ["derive"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Error handling
anyhow = "1.0"
# Serde for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Process management  
subprocess = "0.2"
# Optional GUI
gtk4 = { version = "0.9", optional = true }
# Web interface
warp = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["cli"]
cli = []
gui = ["gtk4"]
web = ["warp", "futures-util"]

[[bin]]
name = "openvpn-manager"
path = "src/main.rs"
