[package]
name = "openvpn-manager"
version = "0.1.0"
edition = "2021"
authors = ["Davidmctf <davidmctf@gmail.com>"]
description = "🚀 Simple OpenVPN manager for Linux with CLI and Web interfaces"
license = "MIT"
keywords = ["vpn", "openvpn", "networkmanager", "linux", "web"]
repository = "https://github.com/Davidmctf/ui-openvpn-linux"

[dependencies]
# Core dependencies
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.2"

# Async runtime (only for web features)
tokio = { version = "1.0", features = ["full"], optional = true }

# Web interface dependencies
warp = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["cli"]
cli = []
web = ["tokio", "warp", "futures-util"]

[[bin]]
name = "openvpn-manager"
path = "src/main.rs"