[package]
name = "openvpn-manager-tauri"
version = "0.1.0"
description = "🚀 UI OpenVPN Linux - Navegador Espacial de Conexiones VPN"
authors = ["Davidmctf <davidmctf@gmail.com>"]
license = "MIT"
repository = "https://github.com/Davidmctf/openvpn-manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["shell-execute"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]